[package]
name = "reading"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["http1", "http2", "multipart", "tokio", "original-uri"] }
axum-extra = { version = "0.9.3", features = ["form"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
markdown = "1.0.0-alpha.20"
maud = { version = "0.26.0", features = ["axum"] }
reading_roundup_data = { version = "0.1.0", path = "../data" }
roundup = { version = "0.1.0", path = "../roundup" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
