[package]
name = "roundup"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
http = "1.1.0"
markdown = "1.0.0-alpha.20"
reading_roundup_data = { version = "0.1.0", path = "../data" }
regex-lite = "0.1.6"
rusqlite = { version= "0.32.1", features = ["bundled"] }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
